@@ -2,6 +2,10 @@ package com.kintone.api.client.restapi.management.app;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+
+import java.util.ArrayList;
+import java.util.List;
 
 import org.junit.Test;
 
@@ -22,9 +26,9 @@ public class AppManagermentTest {
         App app = appManagerment.getApp(139);
 
         assertNotNull(app);
-        assertEquals(139, app.getAppId());
-        assertEquals(new Integer(1), app.getSpaceId());
-        assertEquals(new Integer(1), app.getThreadId());
+        assertEquals(Integer.valueOf(139), app.getAppId());
+        assertEquals(Integer.valueOf(1), app.getSpaceId());
+        assertEquals(Integer.valueOf(1), app.getThreadId());
         assertNotNull(app.getCode());
         assertNotNull(app.getName());
         assertNotNull(app.getDescription());
@@ -45,7 +49,7 @@ public class AppManagermentTest {
         App app = appManagerment.getApp(140);
 
         assertNotNull(app);
-        assertEquals(140, app.getAppId());
+        assertEquals(Integer.valueOf(140), app.getAppId());
         assertEquals(null, app.getSpaceId());
         assertEquals(null, app.getThreadId());
     }
@@ -59,5 +63,79 @@ public class AppManagermentTest {
 
         AppManagement appManagerment = new AppManagement(connection);
         appManagerment.getApp(141);
+    }
+
+    @Test
+    public void testGetAppsShouldSuccess() throws KintoneAPIException {
+        Auth auth = new Auth();
+        auth.setPasswordAuth("dinh", "Dinh1990");
+        Connection connection = new Connection("https://ox806.kintone.com", auth);
+        connection.setProxy("10.224.136.41", 3128);
+
+        AppManagement appManagerment = new AppManagement(connection);
+        List<App> apps = appManagerment.getApps(null, null);
+        assertTrue(!apps.isEmpty());
+    }
+
+    @Test(expected=KintoneAPIException.class)
+    public void testGetAppsShouldFailWhenGivenWrongLimitValue() throws KintoneAPIException {
+        Auth auth = new Auth();
+        auth.setPasswordAuth("dinh", "Dinh1990");
+        Connection connection = new Connection("https://ox806.kintone.com", auth);
+        connection.setProxy("10.224.136.41", 3128);
+
+        AppManagement appManagerment = new AppManagement(connection);
+        List<App> apps = appManagerment.getApps(200, null);
+        assertTrue(!apps.isEmpty());
+    }
+
+    @Test(expected=KintoneAPIException.class)
+    public void testGetAppsShouldFailWhenGivenWrongOffsetValue() throws KintoneAPIException {
+        Auth auth = new Auth();
+        auth.setPasswordAuth("dinh", "Dinh1990");
+        Connection connection = new Connection("https://ox806.kintone.com", auth);
+        connection.setProxy("10.224.136.41", 3128);
+
+        AppManagement appManagerment = new AppManagement(connection);
+        List<App> apps = appManagerment.getApps(1, -2);
+        assertTrue(!apps.isEmpty());
+    }
+
+    @Test(expected=KintoneAPIException.class)
+    public void testGetAppsShouldFailWhenUsingTokenAPI() throws KintoneAPIException {
+        Auth auth = new Auth();
+        auth.setApiToken("Wbxsfd95bDKEjSf9wTtKu7VzcctVhkT0TfKJoIFm");
+        Connection connection = new Connection("https://ox806.kintone.com", auth);
+        connection.setProxy("10.224.136.41", 3128);
+
+        AppManagement appManagerment = new AppManagement(connection);
+        List<App> apps = appManagerment.getApps(null, null);
+        assertTrue(!apps.isEmpty());
+    }
+
+    @Test
+    public void testGetAppsShouldReturnListHasOneElementWhenGivenLimitIsOne() throws KintoneAPIException {
+        Auth auth = new Auth();
+        auth.setPasswordAuth("dinh", "Dinh1990");
+        Connection connection = new Connection("https://ox806.kintone.com", auth);
+        connection.setProxy("10.224.136.41", 3128);
+
+        AppManagement appManagerment = new AppManagement(connection);
+        List<App> apps = appManagerment.getApps(1, 0);
+        assertEquals(1, apps.size());
+    }
+
+    @Test
+    public void testGetAppsShouldSuccessWhenPassAppId() throws KintoneAPIException {
+        Auth auth = new Auth();
+        auth.setPasswordAuth("dinh", "Dinh1990");
+        Connection connection = new Connection("https://ox806.kintone.com", auth);
+        connection.setProxy("10.224.136.41", 3128);
+        AppManagement appManagerment = new AppManagement(connection);
+
+        List<Integer> appIds = new ArrayList<Integer>();
+        appIds.add(127);
+        List<App> apps = appManagerment.getAppsByIDs(appIds, null, null);
+        assertEquals(1, apps.size());
     }
 }
